<!--
  ~    Copyright 2021 Jorge Ávila Estévez
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">Pokemon</string>

    <string name="splash_title">PokéList</string>
    <string name="splash_subtitle">Una app para AtSistemas</string>
    <string name="splash_caption">Github: jorgeavilae/Pokemon-AtSistemas</string>
    <string name="splash_loading">Cargando…</string>

    <string name="title_list">Pokémon List</string>
    <string name="title_profile">Profile</string>

    <string name="empty_list_msg">¿Lista vacía?</string>
    <string name="swipe_down_to_load_data">Swipe down para cargar datos</string>
    <string name="leaf_icon">Leaf Icon</string>
    <string name="weight_icon">Weight Icon</string>
    <string name="height_icon">Height Icon</string>
    <string name="item_weight_format">%1$.2f</string>

    <string name="id_with_number">ID: %1$d</string>
    <string name="order_with_number">Pokemon No. %1$d</string>
    <string name="height_with_number">Height: %1$.2f m</string>
    <string name="weight_with_number">Weight: %1$.2f kg</string>
    <string name="types">Types:</string>
    <string name="hp">HP</string>
    <string name="attack">attack</string>
    <string name="defense">defense</string>
    <string name="special_attack">special attack</string>
    <string name="special_defense">special defense</string>
    <string name="speed">speed</string>

    <string name="player">Player</string>
    <string name="badges">Badges</string>
    <string name="pokedex">Pokedex</string>
    <string name="time">Time</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>

    <string name="alert">Alert</string>
    <string name="accept">Accept</string>
    <string name="close">Close</string>
    <string name="search">Search</string>

    <string name="delete_db">Delete Database</string>
    <string name="delete_preferences">Delete Preferences</string>

    <!-- Content Description texts -->
    <string name="pokemon_front_image_content_description">Front image of a Pokemon</string>
    <string name="pokemon_back_image_content_description">Back image of a Pokemon</string>
    <string name="pokemon_official_image_content_description">Official image of a Pokemon</string>
    <string name="pokemon_paint_image_content_description">Cartoon image of a Pokemon</string>
    <string name="background_image_content_description">Gradient used for background</string>
    <string name="left_arrow_image_button">Left arrow ImageButton</string>
    <string name="right_arrow_image_button">Right arrow ImageButton</string>
    <string name="top_arrow_image_button">Top Arrow ImageButton</string>
    <string name="bottom_arrow_image_button">Bottom Arrow ImageButton</string>
    <string name="splash_loading_gif">Splash loading gif</string>
    <string name="swipe_down_icon">Swipe down icon</string>
</resources>