<?xml version="1.0" encoding="utf-8"?><!--
  ~    Copyright 2021 Jorge Ávila Estévez
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pokemon_yellow_almost_transparent">

    <TextView
        android:id="@+id/splash_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_margin_outer"
        android:text="@string/user_default"
        android:textAppearance="@style/MyFontStyles.Caption.Bigger.AllCaps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Mock" />

    <TextView
        android:id="@+id/splash_cargando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_margin_outer"
        android:text="@string/splash_loading"
        android:textAppearance="@style/MyFontStyles.Headline6.Normal.AllCaps"
        app:layout_constraintBottom_toBottomOf="@id/splash_image"
        app:layout_constraintEnd_toEndOf="@id/splash_image"
        app:layout_constraintStart_toStartOf="@id/splash_image" />

    <ImageView
        android:id="@+id/splash_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/splash_gif_margin"
        android:layout_marginTop="@dimen/splash_gif_margin"
        android:background="@drawable/background_splash"
        android:backgroundTintMode="multiply"
        android:contentDescription="@string/splash_loading_gif"
        android:paddingStart="@dimen/splash_gif_padding"
        android:paddingTop="@dimen/splash_gif_padding"
        android:paddingEnd="@dimen/splash_gif_padding"
        android:paddingBottom="@dimen/splash_gif_padding_text"
        android:src="@drawable/gif_pikachu_run"
        app:layout_constraintBottom_toTopOf="@id/splash_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_version"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/splash_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fragment_margin_outer"
        android:layout_marginBottom="0dp"
        android:text="@string/splash_title"
        android:textAlignment="center"
        android:textAppearance="@style/MyFontStyles.Headline2.OnBackground"
        app:layout_constraintBottom_toTopOf="@id/splash_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_image"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/splash_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fragment_margin_outer"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="@dimen/splash_gif_margin"
        android:text="@string/splash_subtitle"
        android:textAlignment="center"
        android:textAppearance="@style/MyFontStyles.Headline4.OnBackground"
        app:layout_constraintBottom_toTopOf="@id/splash_author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_title" />

    <TextView
        android:id="@+id/splash_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_margin_outer"
        android:text="@string/splash_caption"
        android:textAppearance="@style/MyFontStyles.Caption.Bigger"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>