<?xml version="1.0" encoding="utf-8"?><!--
  ~    Copyright 2021 Jorge Ávila Estévez
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dpad_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/dpad_top_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Label" />

    <ImageButton
        android:id="@+id/dpad_top_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/top_arrow_image_button"
        android:paddingHorizontal="8dp"
        android:paddingVertical="2dp"
        android:src="@drawable/ic_arrow_up"
        app:layout_constraintBottom_toTopOf="@id/dpad_text_room"
        app:layout_constraintEnd_toEndOf="@id/dpad_text_room"
        app:layout_constraintStart_toStartOf="@id/dpad_text_room"
        app:layout_constraintTop_toBottomOf="@id/dpad_label" />

    <ImageButton
        android:id="@+id/dpad_left_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/left_arrow_image_button"
        android:paddingHorizontal="8dp"
        android:paddingVertical="2dp"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintBottom_toBottomOf="@id/dpad_text_room"
        app:layout_constraintEnd_toStartOf="@id/dpad_text_room"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/dpad_text_room" />

    <TextView
        android:id="@+id/dpad_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/dpad_text_room"
        app:layout_constraintEnd_toEndOf="@id/dpad_text_room"
        app:layout_constraintStart_toStartOf="@id/dpad_text_room"
        tools:text="10" />

    <TextView
        android:id="@+id/dpad_text_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="9999"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/dpad_bottom_button"
        app:layout_constraintEnd_toStartOf="@id/dpad_right_button"
        app:layout_constraintStart_toEndOf="@id/dpad_left_button"
        app:layout_constraintTop_toBottomOf="@id/dpad_top_button"
        tools:ignore="HardcodedText" />

    <ImageButton
        android:id="@+id/dpad_right_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/right_arrow_image_button"
        android:paddingHorizontal="8dp"
        android:paddingVertical="2dp"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="@id/dpad_text_room"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dpad_text_room"
        app:layout_constraintTop_toTopOf="@id/dpad_text_room" />

    <ImageButton
        android:id="@+id/dpad_bottom_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bottom_arrow_image_button"
        android:paddingHorizontal="8dp"
        android:paddingVertical="2dp"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/dpad_text_room"
        app:layout_constraintStart_toStartOf="@id/dpad_text_room"
        app:layout_constraintTop_toBottomOf="@id/dpad_text_room" />

</androidx.constraintlayout.widget.ConstraintLayout>