<?xml version="1.0" encoding="utf-8"?><!--
  ~    Copyright 2021 Jorge Ávila Estévez
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/detail_front"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/pokemon_front_image_content_description"
            tools:src="@drawable/pikachu_mini" />

        <ImageView
            android:id="@+id/detail_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/pokemon_back_image_content_description"
            tools:src="@drawable/pikachu_mini" />

        <TextView
            android:id="@+id/detail_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="ID: 1" />

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:transitionName="transition_pokemon_name"
            tools:text="Bulbasaur" />

        <TextView
            android:id="@+id/detail_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Order in whole Pokedex: 3" />

        <TextView
            android:id="@+id/detail_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Height: 10,5 m" />

        <TextView
            android:id="@+id/detail_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Weight: 47.5 kg" />

        <TextView
            android:id="@+id/detail_types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Tipos: grass, poison" />

        <ImageView
            android:id="@+id/detail_official"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/pokemon_official_image_content_description"
            tools:src="@drawable/pikachu_official" />

        <!-- Stats -->
        <TextView
            android:id="@+id/detail_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Stats"
            tools:text="Stats" />

        <TextView
            android:id="@+id/detail_stat_hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="HP: 34" />

        <TextView
            android:id="@+id/detail_stat_attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Attack: 34" />

        <TextView
            android:id="@+id/detail_stat_defense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Defense: 34" />

        <TextView
            android:id="@+id/detail_stat_sp_attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Special Attack: 34" />

        <TextView
            android:id="@+id/detail_stat_sp_defense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Special Defense: 34" />

        <TextView
            android:id="@+id/detail_stat_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Speed: 34" />
    </LinearLayout>
</ScrollView>